# Metric-Voting

./: .envrc  .gitignore  .nfs0000000193324b660001b2c2  README.md  environment.yml  experiments.ipynb  pyproject.toml
batch/: four_party_sample_collect.py  four_party_sample_collect_10k.py  four_party_sample_collect_10k_ea.py  plot_box.py  plot_box2.py  plot_box3.py  plot_box4.py  plot_box5.py  plot_box6.py  plot_box7.py  plot_distribution.py  plot_distribution2.py  plot_distribution3.py  plot_distribution4.py  plot_distribution5.py  plot_distribution6.py  plot_distribution7.py  plot_sizes.py  plot_violin.py  two_party_sample_collect.py  two_party_sample_collect_10k.py  two_party_sample_collect_rd.py  two_party_sample_collect_rd_10k.py  two_party_sample_collect_rd_separated.py  two_sizes_sample_collect.py
code/: election_sampling.py  elections.py  spatial_generation.py  tools.py
data/: 2bloc_new.npz  2bloc_worst.npz  2sizes0.npz  2sizes1.npz  2sizes10.npz  2sizes11.npz  2sizes12.npz  2sizes13.npz  2sizes14.npz  2sizes15.npz  2sizes16.npz  2sizes17.npz  2sizes18.npz  2sizes19.npz  2sizes2.npz  2sizes20.npz  2sizes3.npz  2sizes4.npz  2sizes5.npz  2sizes6.npz  2sizes7.npz  2sizes8.npz  2sizes9.npz
examples/: 1-spatial-generation.ipynb  2-elections.ipynb  2_bloc_spatial.ipynb  2bloc.ipynb  3-measurements.ipynb  4-experiment-plotting.ipynb  elections.ipynb  examples.ipynb  examples2.ipynb  experiment_plotting.ipynb  grid.ipynb  measurements.ipynb  older_experiments.ipynb  spatial_generation.ipynb  worst_bloc.ipynb
experiments/: disc_sample_collect.py  examples2.ipynb  (+10 more)
(+138 files in other folders)
