[tool.poetry]
name = "metric_voting"
version = "0.1.0"
description = "Does some stuff"
authors = ["Kevin Quinn <quinnk@bu.edu>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9, <3.13"
numpy = ">=1.26.0"
pandas = ">=1.5.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
pulp = "^2.9.0"
votekit = "^3.0.0"
gurobipy = "^12.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

